# csw-to-stac

./: .gitignore  README.md  gen_readme.py  pyproject.toml  requirements.txt
docs/: Makefile  makehtmloutput.txt
docs/_static/: custom.css
docs/source/: changelog.rst  conf.py  index.rst  installation.rst  modules.rst  tests.rst  usage.rst
docs/source/_autosummary/: csw2stac.add_metadata.rst  csw2stac.assets.rst  csw2stac.central_portal_layer_catalog.rst  csw2stac.csw_catalog.rst  csw2stac.csw_to_stac.rst  csw2stac.main.rst  csw2stac.rst  csw2stac.stac.rst  csw2stac.stac_to_resto.rst  csw2stac.utils.rst
src/: main.py
src/csw2stac/: add_metadata.py  assets.py  central_portal_layer_catalog.py  csw_catalog.py  csw_to_stac.py  stac.py  stac_to_resto.py  utils.py
tests/: analyze_results.py
