[project]
name = "csw-to-stac"
version = "0.1.0"
description = "csw to stac"
authors = [
    {name = "samuelfooks",email = "samuel.fooks@gmail.com"}
]
license = {text = "CCBY-4.0"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "s3fs (==2023.12.0)",
    "aiobotocore (==2.17.0)",
    "botocore (==1.35.93)",
    "boto3 (==1.35.93)",
    "fsspec (==2023.12.0)",
    "affine (>=2.4.0,<3.0.0)",
    "aiohappyeyeballs (>=2.4.4,<3.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "aioitertools (>=0.12.0,<0.13.0)",
    "aiosignal (>=1.3.2,<2.0.0)",
    "alabaster (>=1.0.0,<2.0.0)",
    "asciitree (>=0.3.3,<0.4.0)",
    "attrs (>=25.1.0,<26.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "cartopy (>=0.24.1,<0.25.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "cftime (>=1.6.4.post1,<2.0.0)",
    "charset-normalizer (>=3.4.1,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "click-plugins (>=1.1.1,<2.0.0)",
    "cligj (>=0.7.2,<0.8.0)",
    "cloudpickle (>=3.1.1,<4.0.0)",
    "dask (>=2025.1.0,<2026.0.0)",
    "dask-expr (>=2.0.0,<3.0.0)",
    "dask-geopandas (>=0.4.3,<0.5.0)",
    "distributed (>=2025.1.0,<2026.0.0)",
    "docutils (>=0.21.2,<0.22.0)",
    "duckdb (>=1.2.0,<2.0.0)",
    "fasteners (>=0.19,<0.20)",
    "fiona (>=1.10.1,<2.0.0)",
    "frozenlist (>=1.5.0,<2.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "idna (>=3.10,<4.0)",
    "imagesize (>=1.4.1,<2.0.0)",
    "importlib-metadata (>=8.6.1,<9.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "jmespath (>=1.0.1,<2.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "jsonschema-specifications (>=2024.10.1,<2025.0.0)",
    "locket (>=1.0.0,<2.0.0)",
    "mako (>=1.3.9,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "markdown (>=3.7,<4.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "multidict (>=6.1.0,<7.0.0)",
    "myst-parser (>=4.0.0,<5.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "numcodecs (>=0.15.0,<0.16.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "packaging (>=24.2,<25.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "partd (>=1.4.2,<2.0.0)",
    "pdoc3 (>=0.11.5,<0.12.0)",
    "propcache (>=0.2.1,<0.3.0)",
    "psutil (>=6.1.1,<7.0.0)",
    "psycopg (>=3.2.4,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "pyogrio (>=0.10.0,<0.11.0)",
    "pyparsing (>=3.2.1,<4.0.0)",
    "pyproj (>=3.7.0,<4.0.0)",
    "pystac (>=1.12.1,<2.0.0)",
    "pystac-client (>=0.8.5,<0.9.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "referencing (>=0.36.2,<0.37.0)",
    "requests (>=2.32.3,<3.0.0)",
    "rioxarray (>=0.18.2,<0.19.0)",
    "rpds-py (>=0.22.3,<0.23.0)",
    "shapely (>=2.0.7,<3.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "snowballstemmer (>=2.2.0,<3.0.0)",
    "snuggs (>=1.4.7,<2.0.0)",
    "sortedcontainers (>=2.4.0,<3.0.0)",
    "soupsieve (>=2.6,<3.0)",
    "sphinx (>=8.1.3,<9.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "sphinxcontrib-applehelp (>=2.0.0,<3.0.0)",
    "sphinxcontrib-devhelp (>=2.0.0,<3.0.0)",
    "sphinxcontrib-htmlhelp (>=2.1.0,<3.0.0)",
    "sphinxcontrib-jquery (>=4.1,<5.0)",
    "sphinxcontrib-jsmath (>=1.0.1,<2.0.0)",
    "sphinxcontrib-qthelp (>=2.0.0,<3.0.0)",
    "sphinxcontrib-serializinghtml (>=2.0.0,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "tblib (>=3.0.0,<4.0.0)",
    "toolz (>=1.0.0,<2.0.0)",
    "tornado (>=6.4.2,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "tzdata (>=2025.1,<2026.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "wrapt (>=1.17.2,<2.0.0)",
    "xarray (>=2025.1.2,<2026.0.0)",
    "yarl (>=1.18.3,<2.0.0)",
    "zarr (>=3.0.2,<4.0.0)",
    "zict (>=3.0.0,<4.0.0)",
    "zipp (>=3.21.0,<4.0.0)",
    "owslib>=0.32.1",
]

packages = [{ include = "csw2stac", from = "src" }]
